refactor: Unified handling of some standards